refactor: 重构设置和api文档
